4.a) 4.b) and 4.d) done